# Dreamdata

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  V040_IMPLEMENTATION_PLAN.md  alembic.ini  coverage.xml  pyproject.toml
.claude/: README.md
.claude/agents/: RELEASE-AGENT-GUIDE.md  git-ci-agent.md  local-test-agent.md  plan-agent.md  release-agent.md
.claude/skills/: release.md
.github/workflows/: ci-main.yml  ci-nightly.yml  ci-pr.yml
.mex/: AGENTS.md  ROUTER.md  config.json
.mex/context/: architecture.md  conventions.md  decisions.md  metadata-schema.md  process.md  query-and-indexing.md  setup.md  stack.md  testing.md  versioning.md
.mex/patterns/: INDEX.md  add-sdk-method.md  debug-duckdb-scan.md  git-ci-workflow.md  local-testing.md  planning-release.md  register-dataset.md  release-a-version.md
alembic/: env.py
alembic/versions/: 20260617_0001_initial_schema.py  20260617_0002_field_index.py  20260617_0003_parquet_caches.py  20260618_0004_users_permissions.py
docs/: Makefile
docs/source/: conf.py  index.md  installation.md  quickstart.md
docs/source/_static/: custom.css
docs/source/_templates/sidebar/: brand.html
docs/source/api/: dataset.md  engine.md  errors.md
docs/source/phases/: phase-1.md  phase-2.md  phase-3.md  phase-4.md
docs/source/zh_CN/: conf.py  index.md  installation.md  quickstart.md
docs/source/zh_CN/api/: dataset.md  engine.md  errors.md
docs/source/zh_CN/phases/: phase-1.md
scripts/: release.py  run_local_tests.py
src/dreamdata/: __init__.py  config.py  errors.py  fields.py  parquet_cache.py  sdk.py
src/dreamdata/api/: __init__.py  dependencies.py  main.py  models.py
src/dreamdata/api/routers/: __init__.py  annotations.py  auth.py  datasets.py  indexes.py  parquet.py  permissions.py  search.py  users.py  versions.py
src/dreamdata/api/static/: index.html
src/dreamdata/auth/: __init__.py  core.py  dependencies.py  models.py  repository.py
src/dreamdata/engine/: __init__.py  duckdb_engine.py
src/dreamdata/meta/: __init__.py  connection.py  repository.py
src/dreamdata/storage/: __init__.py  jsonl.py  paths.py
src/dreamdata/versioning/: __init__.py  core.py
tests/: conftest.py
tests/component/: test_engine.py  test_meta.py  test_storage.py
tests/e2e/: test_acceptance.py
tests/fuzz/: test_register_fuzz.py
tests/property/: test_field_paths.py  test_search_invariants.py
tests/scale/: test_one_million.py
tests/sdk/: test_annotations.py  test_lifecycle.py  test_register.py  test_search.py  test_versioning.py
tests/unit/: test_errors.py  test_field_paths.py  test_parquet_cache.py  test_settings.py  test_storage.py  test_versioning.py
