[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.extra-build-dependencies]
pyarrow = ["setuptools", "wheel", "setuptools-scm"]

[project]
name = "dreamdata"
version = "0.5.0"
description = "A versioned management engine for LLM training data — JSONL-native storage with multi-user tag isolation, flexible retrieval, functional transforms, and dataset versioning."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "dreamdata" }]
license = { text = "MIT" }
dependencies = [
    "duckdb>=1.0,<2",
    "pandas>=2.1,<3",
    "psycopg[binary]>=3.1,<4",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "pydantic[email]>=2.5,<3",
    "structlog>=24.1,<26",
    "alembic>=1.13,<2",
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "python-multipart>=0.0.12,<0.0.13",
    "python-jose[cryptography]>=3.3,<4",
]

[project.optional-dependencies]
parquet = [
    "pyarrow>=15.0,<17",
]
argon2 = [
    "argon2-cffi>=23.1,<24",
]
full = [
    "pyarrow>=15.0,<17",
    "argon2-cffi>=23.1,<24",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<7",
    "pytest-httpx>=0.32,<0.33",
    "hypothesis>=6.100,<7",
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
    "pandas-stubs>=2.1,<3",
    "sphinx>=7.3,<9",
    "sphinx-autodoc-typehints>=2.0,<4",
    "myst-parser>=3.0,<5",
    "furo>=2024.5.6,<2025",
    "httpx>=0.27,<0.28",
    "setuptools",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dreamdata"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "UP", "C4", "SIM",
    "TID", "PTH", "ARG", "PL", "RUF", "S", "ASYNC",
]
ignore = [
    "E501",   # line length handled by formatter
    "PLR0913", "PLR0912", "PLR0915", "PLR0911", "PLR1714",  # complexity limits — surfacing SDK responsibilities, not noise
    "S101",   # assert (in tests and runtime type checks)
    "S603",   # subprocess.run — fine, audited
    "S607",   # partial path — fine
    "PLR2004", # magic numbers in tests
    "SIM102", "SIM108", "SIM117",  # style suggestions that conflict with readability
    "F841",  # unused variable — sometimes useful for readability
    "C416",  # dict comprehension style
    "PLW0603",  # global is fine for API server
    "B008",  # Depends in default args is FastAPI pattern
    "B904",  # exception chaining not needed here
    "ARG001",  # unused args in API endpoints are expected pattern
    "PLC0415",  # imports inside function are fine for optional deps
    "ASYNC240",  # async lint doesn't apply here
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "PLR", "ARG", "PTH", "B017", "B904", "F841", "E702", "B905", "RUF059", "PLC0415", "SIM105", "S110"]
"alembic/**/*.py" = ["S", "ARG"]
"docs/source/conf.py" = ["S", "ARG"]
"src/dreamdata/engine/**/*.py" = ["S608"]  # SQL is built from sanitized literals, not user input
"src/dreamdata/meta/**/*.py" = ["SIM117"]  # nested with is clearer than combined for transaction+cursor
"src/dreamdata/api/dependencies.py" = ["S108"]  # tmp path is expected usage
"src/dreamdata/api/main.py" = ["S104"]  # binding to all interfaces is expected for server
"scripts/run_local_tests.py" = ["S", "PLR", "ARG", "PTH", "B017", "B904", "F841", "E702", "B905", "RUF059", "PLC0415", "SIM105", "S110", "UP006", "UP035", "PLW1510", "PLW2901", "RUF059", "PTH123"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
files = ["src/dreamdata"]

[[tool.mypy.overrides]]
module = ["duckdb.*", "psycopg.*", "pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dreamdata.parquet_cache"
disable_error_code = ["no-untyped-call"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "error::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "scale: 1M-row scale smoke tests",
]

[tool.coverage.run]
branch = true
source = ["src/dreamdata"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 60
